# vipedown

./: .gitignore  Makefile  PKGBUILD  README.md  changelog.md  pyproject.toml  vipedown-0.1.0-1-any.pkg.tar.zst  ytdl-gui.desktop
pkg/vipedown/: .BUILDINFO  .MTREE  .PKGINFO
src/vipedown-0.1.0/: README.md  pyproject.toml
src/vipedown-0.1.1/: README.md
src/vipedown-0.1.1/resources/: vipedown.desktop
src/vipedown-0.1.1/vipedown/core/: config.py  downloader.py  queue_manager.py
ytdl_gui/: download_worker.py  main.py  settings_dialog.py
