[tool.poetry]
name = "vipedown"
version = "0.1.0"
description = "Fast and efficient video downloader for Linux systems"
authors = ["Bjorn99 <67769176+Bjorn99@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vipedown"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video"
]

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.8.1"
yt-dlp = "^2025.1.26"
ffmpeg-python = "^0.2.0"
ffprobe = "^0.5"
loguru = "^0.7.3"
typing-extensions = "^4.12.2"
psutil = "^6.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
pylint = "^3.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
vipedown = "vipedown.main:main"